# signet

./: .gitguardian.yaml  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Caddyfile  Cargo.toml  DESIGN.md  Dockerfile  LICENSE-APACHE  Makefile  PRIVACY.md  README.md  SECURITY.md  TASKS.md  component_map.yaml  constraints.yaml  design.json  docker-compose.yml  fly.toml  pact.yaml  prompt.md  schema_hints.yaml  sops.md  standards.json  task.md  tasks.json  trust_policy.yaml
.cargo/: config.toml
.claude/: blinddb-notes.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.kin/: code-map.json  config  index.json
contracts/root/history/: 20260227_151409.json
contracts/signet_cred/history/: 20260227_125607.json
contracts/signet_mcp/history/: 20260227_131509.json
contracts/signet_notify/history/: 20260227_134131.json
contracts/signet_policy/history/: 20260227_135806.json
contracts/signet_proof/history/: 20260227_142511.json
contracts/signet_sdk/history/: 20260227_151006.json
contracts/signet_vault/history/: 20260227_151217.json
crates/signet/: Cargo.toml
crates/signet-core/: Cargo.toml
crates/signet-core/src/: crypto.rs  error.rs  lib.rs  traits.rs  types.rs
crates/signet-cred/: Cargo.toml
crates/signet-cred/src/: attribute.rs  authority.rs  capability.rs  consumption.rs  decay.rs  delegated_provider.rs  disclosure.rs  error.rs  issuance.rs  lib.rs  schema.rs  spl_capability.rs  status.rs  types.rs
crates/signet-mcp/: Cargo.toml
crates/signet-mcp/src/: audit.rs  dispatcher.rs  error.rs  lib.rs  pipeline.rs  policy.rs  server.rs  session.rs  types.rs  vault_access.rs  wire.rs
crates/signet-mcp/src/tools/: capability.rs  get_proof.rs  mod.rs  negotiate.rs  query.rs  status.rs  store.rs
crates/signet-notify/: Cargo.toml
crates/signet-notify/src/: authorization.rs  challenge.rs  circuit_breaker.rs  dispatcher.rs  error.rs  lib.rs  scope.rs  types.rs  webhook.rs
crates/signet-policy/: Cargo.toml
crates/signet-policy/src/: actor.rs  engine.rs  error.rs  lib.rs  pattern.rs  predicate.rs  rule.rs  types.rs
crates/signet-proof/: Cargo.toml
crates/signet-proof/src/: bbs.rs  binding.rs  bundle.rs  composition.rs  error.rs  lib.rs  plan.rs  range.rs  request.rs  sdjwt.rs  types.rs
crates/signet-sdk/: Cargo.toml
crates/signet-sdk/src/: authority.rs  capability.rs  credential.rs  error.rs  lib.rs  types.rs  verify.rs
crates/signet-vault/: Cargo.toml
crates/signet-vault/src/: audit.rs  blind_storage.rs  envelope.rs  error.rs  in_memory_backend.rs  key_hierarchy.rs  lib.rs  mnemonic.rs  passkey.rs  session.rs  signer.rs  storage.rs  tier.rs
crates/signet-vault/tests/: attack_surface.rs  show_db.rs
crates/signet/src/: config.rs  error.rs  http.rs  lib.rs  main.rs  multi_tenant.rs
crates/signet/tests/: integration_e2e.rs  journey_e2e.rs
decomposition/: decisions.json  interview.json  pitch.json  tree.json
docs/: Caddyfile  Dockerfile  architecture.md  capability-verification-boundary-2026-06-04.md  claude-desktop-setup.md  delegated-provider-authorization-boundary-2026-06-04.md  fly.toml  index.html  no-key-test-quarantine.md  privacy.html  style.css
homebrew/: signet.rb
scripts/: no_key_material_scan.py
tests/root/: contract_test_suite.json
tests/signet_cred/: contract_test_suite.json
tests/signet_mcp/: contract_test_suite.json
tests/signet_notify/: contract_test_suite.json
tests/signet_policy/: contract_test_suite.json
tests/signet_proof/: contract_test_suite.json
tests/signet_sdk/: contract_test_suite.json
tests/signet_vault/: contract_test_suite.json
