[package]
name = "signet-cred"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Credential issuance (SD-JWT + BBS+) for the Signet sovereign agent stack"

[features]
default = []
real-crypto = ["curve25519-dalek"]

[dependencies]
curve25519-dalek = { workspace = true, optional = true }
ed25519-dalek = { workspace = true }
signet-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
zeroize = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }
agent-safe-spl = { workspace = true }

[dev-dependencies]
