[package]
name = "signet-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Developer SDK (4 primitives) for the Signet sovereign agent stack"

[dependencies]
signet-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }
bs58 = { workspace = true }

[dev-dependencies]
