[package]
name = "signet"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Signet: Personal Sovereign Agent Stack"

[lib]
name = "signet"
path = "src/lib.rs"

[[bin]]
name = "signet"
path = "src/main.rs"

[dependencies]
signet-core = { workspace = true }
signet-vault = { workspace = true }
signet-policy = { workspace = true }
signet-notify = { workspace = true }
signet-cred = { workspace = true }
signet-proof = { workspace = true }
signet-sdk = { workspace = true }
signet-mcp = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
base64 = { workspace = true }
zeroize = { workspace = true }
hex = { workspace = true }
